[package]
name = "turf_api_monolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-redis = "0.12.0"
actix-web = "4.3.1"
session = "0.1.8"
tokio = "1.29.1"
